[package]
name = "linux-taskstats"
version = "0.1.0"
authors = ["Yuto Kawamura <kawamuray.dadada@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust interface to Linux taskstats"
repository = "https://github.com/kawamuray/taskstats-rs"
readme = "README.md"
keywords = ["taskstats", "delay accounting"]
exclude = [
    "tools/*",
    "example/*",
    "docker-build/*",
]

[dependencies]
libc = "0.2"
netlink-sys = "0.2"
thiserror = "1.0.16"
log = "0.4.8"
env_logger = "0.7.1"
prettytable-rs = "0.8.0"
clap = "2.33.1"

[build-dependencies]
bindgen = "0.53.1"
